	   mappings.add(...,
               { arg: true, count: true, motion: true, route: true });
...................................
    * IMPORTANT: shifted key notation now matches Vim's behaviour. E.g. <C-a>
      and <C-A> are equivalent, to map the uppercase character use <C-S-A>.
      (this might change again, as this is REALLY inconsistent, and i don't
       know if I like copying bugs)

    * new "t" option for 'complete' to also switch to open tabs with :open
    * add [c]:toolbaropen[c], [c]:toolbarclose[c], and [c]:toolbartoggle[c]
    * make [c]:open[c] behavior match that of [c]:tabopen[c] and [c]:winopen[c]
      when no argument is specified
    * add extension related commands - [c]:extadd[c], [c]:extdelete[c],
      [c]:extdisable[c], [c]:extenable[c], [c]:extensions[c], [c]:extoptions[c]
    * add *-javascript* flag to [c]:autocommand[c]
    * add 'private' - enter private browsing mode, matching *PrivateMode*
      autocommand
    * add *-description* option to [c]:command[c]
    * command-line options are now supported via the host application's
      *-liberator* option
    * add [m];i[m] and [m];I[m] for opening image location (in new tab)
    * add [j]all.html[j] to show all help sections in a single page - available via
      [c]:helpall[c]
    * add [m];c[m] extended hint mode - open the context menu
    * add [m]@:[m] mapping - repeat the last Ex command
    * add [m]\[m] mapping - toggle between rendered and source view

2009-05-21:
    * version 2.1
    * IMPORTANT: Default value of 'complete' has been changed from "sfl" to "slf"
    * massively speed up [c]:open[c] completions
    * TabMixPlus (and other tab extensions) should work much better now
      together with Vimperator unless you [c]:set guioptions+=[nN][c]
    * remove 'preload' option. You can fake it by some custom JavaScript in your RC file.
    * add [c]:frameonly[c]
    * add [c]:stopall[c]
    * add [c]:tabdo[c]
    * add 'encoding'
    * add 'hintinputs'